tests/fixtures/compile_errors/issue_451.fe
contract o
    pub def bar(x:u256,y:u256)->bool
     return
    pub def bar:
     s